# docker-recreate

./: .gitignore  MANIFEST  README.md  main.py  setup.cfg  setup.py  test_main.py  tox.ini
.github/workflows/: python-publish.yml  unittest.yml
docker_recreate/: __init__.py  cli.py  tests.py
docker_recreate/fixtures/: grafana-image.json
fixtures/: grafana-container.json
tests/: tests.py
