[metadata]
name = docker-recreate
summary = Get docker run command from container
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
author = Jeffrey Zhang
author_email = zhang.lei.fly@gmail.com
url = https://www.github.com/jeffrey4l/docker-recreate
home_page = https://www.github.com/jeffrey4l/docker-recreate

[entry_points]

console_scripts =
  docker-recreate = main:main
